--- a/userapp/templates/userapp/sign_in.html
+++ b/userapp/templates/userapp/sign_in.html
@@ -1,4 +1,4 @@
-{% extends "dating_app/base.html" %}
+{% extends "userapp/base.html" %}
 {% load i18n %}
 {% load static %}
 {% block content %}
@@ -9,7 +9,7 @@
 		  <div class="card" style="border-radius: 1rem;">
 			<div class="row g-0">
 			  <div class="col-md-6 col-lg-5 d-none d-md-block">
-				<img src="{% static 'user_app/cover.jpg' %}"
+				<img src="{% static 'userapp/cover.jpg' %}"
 				  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
 			  </div>
 			  <div class="col-md-6 col-lg-7 d-flex align-items-center">
@@ -30,11 +30,11 @@
 							</div>
 							</form>
 						</div>
-					<form action="{% url 'user_app:signin' %}" method="POST">
+					<form action="{% url 'userapp:signin' %}" method="POST">
 						{% csrf_token %}
 					<div class="d-flex align-items-center mb-3 pb-1">
 					  <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-					  <span class="h1 fw-bold mb-0"><img src="{% static 'user_app/calambug_logo.png' %}" style="height: 60px;" alt="Calambug"></span>
+					  <span class="h1 fw-bold mb-0"><img src="{% static 'userapp/frendate_logo.png' %}" style="height: 60px;" alt="Calambug"></span>
 					</div>
 					<h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">{% trans 'Enter the information you entered while registering.' %}</h5>
 					{% if error_signin %}
@@ -53,7 +53,7 @@
 					<div class="pt-1 mb-4">
 					  <button class="btn btn-dark btn-lg btn-block" type="submit">{% trans 'Sign In' %}</button>
 					</div>
-					<p class="mb-5 pb-lg-2" style="color: #393f81;">{% trans "Don't have an account?" %}<a href="{% url 'user_app:signup' %}"
+					<p class="mb-5 pb-lg-2" style="color: #393f81;">{% trans "Don't have an account?" %}<a href="{% url 'userapp:signup' %}"
 						style="color: #393f81;">{% trans 'Sign Up' %}</a></p>
 				  </form>
 				</div>
