--- a/userapp/templates/userapp/sign_up_step_two.html
+++ b/userapp/templates/userapp/sign_up_step_two.html
@@ -1,5 +1,5 @@
-{% extends "dating_app/base.html" %}
-{% load crispy_forms_tags %}
+{% extends "userapp/base.html" %}
+{% load crispy_forms_filters %}
 {% load static %}
 {% load i18n %}
 {% block content %}
@@ -12,7 +12,7 @@
         <path d="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zM8 4c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995A.905.905 0 0 1 8 4zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
       </svg> {{ error }}</p>
 	{% endif %}
-    <form id="signUpForm" method="POST" action="{% url 'user_app:sign_up_step_two' %}">
+    <form id="signUpForm" method="POST" action="{% url 'userapp:sign_up_step_two' %}">
 		<div class="progress"  role="progressbar" aria-label="Example 1px high" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 1px">
 			<div class="progress-bar" style="width: 66%; background-color: #8538f7;"></div>
 		  </div>
@@ -54,7 +54,7 @@
 				</select>
 			  </div>
         <div class="form-footer d-flex">
-			<a href="{% url 'user_app:sign_up_step_one' %}" class="previous">{% trans 'Previous' %}</a>
+			<a href="{% url 'userapp:sign_up_step_one' %}" class="previous">{% trans 'Previous' %}</a>
             <button type="submit">{% trans 'Next' %}</button>
         </div>
     </form>
