--- a/userapp/templates/userapp/home.html
+++ b/userapp/templates/userapp/home.html
@@ -1,4 +1,4 @@
-{% extends 'userapp/base.html' %}
+{% extends 'datingapp/base.html' %}
 
 {% block content %}
     <p style="margin: 8%">User with username, <strong>{{ user.username }}</strong> successfully logged in!</p>
