--- a/userapp/templates/userapp/sign_up_step_three.html
+++ b/userapp/templates/userapp/sign_up_step_three.html
@@ -1,4 +1,4 @@
-{% extends "userapp/base.html" %}
+{% extends 'datingapp/base.html' %}
 {% load crispy_forms_filters %}
 {% load i18n %}
 {% load static %}
