--- a/userapp/templates/userapp/user_account.html
+++ b/userapp/templates/userapp/user_account.html
@@ -1,4 +1,4 @@
-{% extends "userapp/base.html" %}
+{% extends 'datingapp/base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
 {% load i18n %}
