--- a/userapp/templates/userapp/sign_in.html
+++ b/userapp/templates/userapp/sign_in.html
@@ -34,7 +34,7 @@
 						{% csrf_token %}
 					<div class="d-flex align-items-center mb-3 pb-1">
 					  <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-					  <span class="h1 fw-bold mb-0"><img src="{% static 'userapp/frendate_logo.png' %}" style="height: 60px;" alt="Calambug"></span>
+					  <span class="h1 fw-bold mb-0"><img src="{% static 'userapp/logo.png' %}" style="height: 60px;" alt="Calambug"></span>
 					</div>
 					<h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">{% trans 'Enter the information you entered while registering.' %}</h5>
 					{% if error_signin %}
