--- a/datingapp/templates/datingapp/base.html
+++ b/datingapp/templates/datingapp/base.html
@@ -10,15 +10,15 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static "styles/custom.css" %}">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="{% static 'userapp/icon.ico' %}" type="image/x-icon">
-  <title>Fredate</title>
+  <link rel="shortcut icon" href="{% static 'userapp/logo.ico' %}" type="image/x-icon">
+  <title>Frendate</title>
 </head>
 <body>
   {% if user.is_authenticated %}
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="{% url 'userapp:home' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <img src="{% static 'userapp/frendate_logo.png' %}" style="margin-bottom: 5px;" height="45" alt="Frendate's logo">
+          <img src="{% static 'userapp/logo.png' %}" style="margin-bottom: 5px;" height="45" alt="Frendate's logo">
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
