update template links

--- a/datingapp/templates/datingapp/base.html
+++ b/datingapp/templates/datingapp/base.html
@@ -79,7 +79,7 @@
             </div>
           </li>
         </ul>
-{#        {% include 'dating_app/favorites.html' %}#}
+{#        {% include 'datingapp/favorites.html' %}#}
       </header>
       </div>
   {% endif %}
