--- a/datingapp/templates/datingapp/dating.html
+++ b/datingapp/templates/datingapp/dating.html
@@ -10,7 +10,7 @@
 		{% for card in cards %}
         <div class="col">
           <div class="card" style="max-width: 250px; min-width:150px; border: none; box-shadow: 0px 0px 8px 0px rgba(214, 214, 214, 0.469);">
-			<a href="{% url 'dating_app:partner_account' card.id %}" id="a-card">
+			<a href="{% url 'datingapp:partner_account' card.id %}" id="a-card">
 			<img src="{{ card.profile_pic.url }}" class="bd-placeholder-img card-img-top" style="max-width: 250px; max-height: 250px; min-width: 150px; min-height: 150px; object-fit: cover; object-position: center;" alt="...">
 			</a>
             <div class="card-body">
@@ -22,12 +22,12 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex ms-auto">
                     {% if card.id in saved_to_favorite %}
-                    <a href="{% url 'dating_app:favorite_add' card.id %}" class="btn btn-outline-dark justify-content-end" style="background-color: #000; color: #fff;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
+                    <a href="{% url 'datingapp:favorite_add' card.id %}" class="btn btn-outline-dark justify-content-end" style="background-color: #000; color: #fff;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
                       <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
                       <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
                     </svg></a>
                     {% else %}
-                    <a href="{% url 'dating_app:favorite_add' card.id %}" class="btn btn-outline-dark justify-content-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
+                    <a href="{% url 'datingapp:favorite_add' card.id %}" class="btn btn-outline-dark justify-content-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
                       <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
                       <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
                     </svg></a>
