--- a/datingapp/templates/datingapp/base.html
+++ b/datingapp/templates/datingapp/base.html
@@ -17,7 +17,7 @@
   {% if user.is_authenticated %}
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="{% url 'userapp:home' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <a href="{% url 'datingapp:dating' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <img src="{% static 'userapp/logo.png' %}" style="margin-bottom: 5px;" height="45" alt="Frendate's logo">
         </a>
         <ul class="nav nav-pills">
@@ -38,13 +38,13 @@
               </form>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link link-dark"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: -10px;" height="20" fill="currentColor" class="bi bi-box2-heart" viewBox="0 0 16 16">
+            <a href="{% url 'datingapp:random_card' %}" class="nav-link link-dark"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: -10px;" height="20" fill="currentColor" class="bi bi-box2-heart" viewBox="0 0 16 16">
               <path d="M8 7.982C9.664 6.309 13.825 9.236 8 13 2.175 9.236 6.336 6.31 8 7.982Z"/>
               <path d="M3.75 0a1 1 0 0 0-.8.4L.1 4.2a.5.5 0 0 0-.1.3V15a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V4.5a.5.5 0 0 0-.1-.3L13.05.4a1 1 0 0 0-.8-.4h-8.5Zm0 1H7.5v3h-6l2.25-3ZM8.5 4V1h3.75l2.25 3h-6ZM15 5v10H1V5h14Z"/>
             </svg></a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link link-dark"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: -10px;" height="20" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+            <a href="{% url 'chatapp:message_list' %}" class="nav-link link-dark"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: -10px;" height="20" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
               <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
             </svg></a>
           </li>
