--- a/datingapp/templates/datingapp/favorites.html
+++ b/datingapp/templates/datingapp/favorites.html
@@ -27,7 +27,7 @@
 				  </div>
 				</a>
 			<div class="d-flex">
-			<a href="{% url 'chatapp:inbox' favorite.saved %}" class="btn btn-success flex-fill"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px;" width="16" height="16" fill="currentColor" class="bi bi-chat-fill" viewBox="0 0 16 16">
+			<a href="#" class="btn btn-success flex-fill"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px;" width="16" height="16" fill="currentColor" class="bi bi-chat-fill" viewBox="0 0 16 16">
 				<path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9.06 9.06 0 0 0 8 15z"/>
 			  </svg> {% trans 'Chatting' %}</a>
 			<a href="{% url 'datingapp:favorite_add' favorite.saved.id %}" class="btn btn-danger flex-fill"><svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px;" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
