--- a/userapp/templates/userapp/sign_in.html
+++ b/userapp/templates/userapp/sign_in.html
@@ -1,6 +1,7 @@
 {% extends 'datingapp/base.html' %}
 {% load i18n %}
 {% load static %}
+
 {% block content %}
     <section class="vh-100" style="background-color: #e7f8ff;">
         <div class="container py-5 h-100">
@@ -9,25 +10,20 @@
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="{% static 'userapp/cover.jpg' %}"
-                                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+                                <img src="{% static 'userapp/cover.jpg' %}" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
                                     <div class="d-flex flex-row-reverse">
                                         <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
                                             <div style="width: fit-content;">
-                                                <select onchange="this.form.submit()" name="language"
-                                                        class="form-select" id="inputGroupSelect04"
-                                                        aria-label="Default select example">
+                                                <select onchange="this.form.submit()" name="language" class="form-select" id="inputGroupSelect04" aria-label="Default select example">
                                                     {% get_current_language as LANGUAGE_CODE %}
                                                     {% get_available_languages as LANGUAGES %}
                                                     {% get_language_info_list for LANGUAGES as languages %}
                                                     {% for language in languages %}
-                                                        <option value="{{ language.code }}"
-                                                                {% if language.code == LANGUAGE_CODE %}
-                                                                selected{% endif %}>
-                                                            {{ language.code }}
+                                                        <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                                                            {{ language.name_local }} ({{ language.code }})
                                                         </option>
                                                     {% endfor %}
                                                 </select>
@@ -37,39 +33,26 @@
                                     <form action="{% url 'userapp:signin' %}" method="POST">
                                         {% csrf_token %}
                                         <div class="d-flex align-items-center mb-3 pb-1">
-                                            
-                                            <span class="h1 fw-bold mb-0"><img src="{% static 'userapp/logo.png' %}"
-                                                                               style="height: 60px;"
-                                                                               alt="Frendate"></span>
-                                            <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                            <span class="h1 fw-bold mb-0"><img src="{% static 'userapp/logo.png' %}" style="height: 60px;" alt="Frendate"></span>
                                         </div>
-                                        <h5 class="fw-normal mb-3 pb-3"
-                                            style="letter-spacing: 1px;">{% trans 'Enter the information you entered while registering.' %}</h5>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">{% trans 'Enter the information you entered while registering.' %}</h5>
                                         {% if error_signin %}
                                             <div class="alert alert-danger" role="alert">
-                    <span><svg xmlns="http://www.w3.org/2000/svg" style="align-items: center; margin-top: -5px;"
-                               width="16" height="16" fill="currentColor" class="bi bi-exclamation-octagon-fill"
-                               viewBox="0 0 16 16">
-						<path d="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zM8 4c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995A.905.905 0 0 1 8 4zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-					  </svg></span> {{ error_signin }}
+                                                {{ error_signin }}
                                             </div>
                                         {% endif %}
                                         <div class="form-outline mb-4">
-                                            <input type="text" id="username" name="username"
-                                                   class="form-control form-control-lg" placeholder="Login"/>
+                                            <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="{% trans 'Login' %}"/>
                                         </div>
                                         <div class="form-outline mb-4">
-                                            <input type="password" id="password" name="password"
-                                                   class="form-control form-control-lg" placeholder="Password"/>
+                                            <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="{% trans 'Password' %}"/>
                                         </div>
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block"
-                                                    type="submit">{% trans 'Sign In' %}</button>
+                                            <button class="btn btn-dark btn-lg btn-block" type="submit">{% trans 'Sign In' %}</button>
                                         </div>
-                                        <p class="mb-5 pb-lg-2"
-                                           style="color: #393f81;">{% trans "Don't have an account?" %}<a
-                                                href="{% url 'userapp:signup' %}"
-                                                style="color: #393f81;">{% trans 'Sign Up' %}</a></p>
+                                        <p class="mb-2" style="color: #393f81;">{% trans "Don't have an account?" %} <a href="{% url 'userapp:signup' %}" style="color: #393f81;">{% trans 'Sign Up' %}</a></p>
+                                        <p class="mb-0" style="color: #393f81;">Don't Remember your password?</p>
+                                        <p style="color: #393f81;"><a href="{% url 'userapp:forget_password_action' %}" style="color: #393f81;">{% trans 'Forgot Password?' %}</a></p>
                                     </form>
                                 </div>
                             </div>
