align password reset text in sign-in

--- a/userapp/templates/userapp/password_reset_form.html
+++ b/userapp/templates/userapp/password_reset_form.html
@@ -1,4 +1,3 @@
-<!-- userapp/templates/userapp/password_reset_form.html -->
 {% extends 'datingapp/base.html' %}
 {% load i18n %}
 
@@ -10,7 +9,7 @@
                 <div class="card" style="border-radius: 1rem;">
                     <div class="card-body p-4 p-lg-5 text-black">
 
-                        <p class="text-center mb-4">{% trans "Don't Remember Your Password?" %}</p>
+                        <h2 class="text-center mb-4">{% trans "Reset your Password" %}</h2>
 
                         <form method="POST" action="">
                             {% csrf_token %}
