--- a/datingapp/templates/datingapp/partner_account.html
+++ b/datingapp/templates/datingapp/partner_account.html
@@ -13,7 +13,7 @@
               <h3 class="m-b-0">{{ partner_account.profile.first_name }} {{ partner_account.profile.last_name }}, {{ partner_account.profile.age }}</h3>
               <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="margin-bottom: 5px;" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-              </svg> {{ partner_account.profile.city }}</p> <a href="#" class="m-t-10 waves-effect waves-dark btn btn-primary btn-md btn-rounded" data-abc="true">{% trans 'Chat Now' %}</a>
+              </svg> {{ partner_account.profile.city }}</p> <a href="{% url 'chatapp:inbox' partner_account %}" class="m-t-10 waves-effect waves-dark btn btn-primary btn-md btn-rounded" data-abc="true">{% trans 'Chat Now' %}</a>
           </div>
           </div>
        </div>
