change username placeholder

--- a/userapp/templates/userapp/sign_in.html
+++ b/userapp/templates/userapp/sign_in.html
@@ -42,7 +42,7 @@
                                             </div>
                                         {% endif %}
                                         <div class="form-outline mb-4">
-                                            <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="{% trans 'Login' %}"/>
+                                            <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="{% trans 'Username' %}"/>
                                         </div>
                                         <div class="form-outline mb-4">
                                             <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="{% trans 'Password' %}"/>
