--- a/userapp/templates/userapp/sign_up.html
+++ b/userapp/templates/userapp/sign_up.html
@@ -46,7 +46,7 @@
 			{% endfor %}
             {% endif %}
 					<div class="form-outline mb-4">
-					  <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="{% trans 'Login' %}" />
+					  <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="{% trans 'Username' %}" />
 					</div>
   
 					<div class="form-outline mb-4">
