--- a/userapp/templates/userapp/password_reset_form.html
+++ b/userapp/templates/userapp/password_reset_form.html
@@ -1,35 +1,80 @@
 {% extends 'datingapp/base.html' %}
+{% load crispy_forms_filters %}
 {% load i18n %}
+{% load static %}
 
 {% block content %}
-<section class="vh-100">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-10">
-                <div class="card" style="border-radius: 1rem;">
-                    <div class="card-body p-4 p-lg-5 text-black">
-
-                        <h2 class="text-center mb-4">{% trans "Reset your Password" %}</h2>
-
-                        <form method="POST" action="">
-                            {% csrf_token %}
-                            <div class="form-outline mb-4">
-                                {{ form.new_password.label_tag }}
-                                {{ form.new_password }}
+    <section class="vh-100" style="background-color: #e7f8ff;">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-xl-10">
+                    <div class="card" style="border-radius: 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                <img src="{% static 'userapp/cover.jpg' %}" alt="login form" class="img-fluid"
+                                     style="border-radius: 1rem 0 0 1rem;"/>
                             </div>
-                            <div class="form-outline mb-4">
-                                {{ form.confirm_password.label_tag }}
-                                {{ form.confirm_password }}
-                            </div>
-                            <div class="pt-1 mb-4">
-                                <button class="btn btn-dark btn-lg btn-block" type="submit">{% trans 'Reset Password' %}</button>
-                            </div>
-                        </form>
+                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                <div class="card-body p-4 p-lg-5 text-black">
+                                    <div class="d-flex flex-row-reverse">
+                                        <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                                            <div style="width: fit-content;">
+                                                <select onchange="this.form.submit()" name="language"
+                                                        class="form-select" id="inputGroupSelect04"
+                                                        aria-label="Default select example">
+                                                    {% get_current_language as LANGUAGE_CODE %}
+                                                    {% get_available_languages as LANGUAGES %}
+                                                    {% get_language_info_list for LANGUAGES as languages %}
+                                                    {% for language in languages %}
+                                                        <option value="{{ language.code }}"
+                                                                {% if language.code == LANGUAGE_CODE %}
+                                                                selected{% endif %}>
+                                                            {{ language.name_local }} ({{ language.code }})
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    {% csrf_token %}
+                                    <div class="d-flex align-items-center mb-3 pb-1">
+                                        <span class="h1 fw-bold mb-0"><img src="{% static 'userapp/logo.png' %}"
+                                                                           style="height: 60px;" alt="Frendate"></span>
+                                    </div>
+                                    <h4 class="fw-normal mb-3 pb-3">
+                                        {% trans 'Reset your Password' %}
+                                    </h4>
+                                    <h5 class="fw-normal mb-3 pb-3"
+                                        style="letter-spacing: 1px;">{% trans 'Please enter your new password:' %}
+                                    </h5>
 
+                                    <div class="pt-1 mb-4">
+                                        <form method="POST" action="">
+                                            {% csrf_token %}
+                                            <div class="mb-4">
+                                                <label for="id_new_password"
+                                                       class="form-label">{{ form.new_password.label }}</label>
+                                                <input type="password" name="new_password" id="id_new_password"
+                                                       class="form-control">
+                                            </div>
+                                            <div class="mb-4">
+                                                <label for="id_confirm_password"
+                                                       class="form-label">{{ form.confirm_password.label }}</label>
+                                                <input type="password" name="confirm_password" id="id_confirm_password"
+                                                       class="form-control">
+                                            </div>
+                                            <div class="mb-4">
+                                                <button class="btn btn-dark btn-lg btn-block"
+                                                        type="submit">{% trans 'Reset Password' %}</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 {% endblock %}
