--- a/datingapp/templates/datingapp/random_card.html
+++ b/datingapp/templates/datingapp/random_card.html
@@ -9,8 +9,7 @@
 				<div class="card text-center">
 					<div class="card-image">
 						<a href="{% url 'datingapp:partner_account' user.id %}">
-						<img src="{{ user.profile_pic.url }}" style="width: 100vh; object-fit: cover; object-position: center;"
-							alt="">
+						<img src="{{ user.profile_pic.url }}" alt="">
 						</a>
 					</div>
 					<div class="card-content d-flex flex-column align-items-center">
