--- a/static/styles/random_card.css
+++ b/static/styles/random_card.css
@@ -18,21 +18,22 @@ body {
     border-radius: 20px;
     overflow: hidden;
     max-width: 500px;
-    max-height: 100vh;
     border: none;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-
+    height: 400px;
 }
 
 .card .card-image {
     width: 100%;
-    max-height: 100vh;
+    height: 70%;
+    overflow: hidden;
 }
 
 .card .card-image img {
     width: 100%;
-    max-height: 100vh;
+    height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .card .card-content {
