display error message in password reset

--- a/userapp/templates/userapp/forget_password.html
+++ b/userapp/templates/userapp/forget_password.html
@@ -43,6 +43,13 @@
                                     <h4 class="fw-normal mb-3 pb-3">
                                         {% trans 'Reset your Password' %}
                                     </h4>
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            <div class="alert alert-danger" role="alert">
+                                                {{ message }}
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
                                     <h5 class="fw-normal mb-3 pb-3"
                                         style="letter-spacing: 1px;">{% trans 'Please enter your username:' %}
                                     </h5>
