update validation logic

--- a/userapp/templates/userapp/user_account.html
+++ b/userapp/templates/userapp/user_account.html
@@ -11,13 +11,16 @@
     <div class="row g-5">
     <div class="col-md-6 col-lg-6 order-md-last">
         <h4 class="mb-3">{% trans 'Media' %}</h4>
-        {% if error %}
-            <p class="alert alert-danger">
-                <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px;" width="16" height="16"
-                     fill="currentColor" class="bi bi-exclamation-octagon-fill" viewBox="0 0 16 16">
-                    <path d="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zM8 4c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995A.905.905 0 0 1 8 4zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </svg>
-                {{ error }}</p>
+        {% if errors %}
+            {% for error in errors %}
+                <div class="alert alert-danger">
+                    <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px;" width="16" height="16"
+                         fill="currentColor" class="bi bi-exclamation-octagon-fill" viewBox="0 0 16 16">
+                        <path d="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zM8 4c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995A.905.905 0 0 1 8 4zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>&nbsp;
+                    {{ error }}
+                </div>
+            {% endfor %}
         {% endif %}
         <div class="card"><img class="card-img-top" src="{{ user.profile.banner.url }}"
                                style="object-fit: cover; object-position: center;" alt="Card image cap">
