--- a/datingapp/templates/datingapp/random_card.html
+++ b/datingapp/templates/datingapp/random_card.html
@@ -6,7 +6,7 @@
 <div class="container text-center">
 	{% if random_card %}
 		{% for user in random_card %}
-				<div class="card text-center" style="height: 600px; width: 550px">
+				<div class="card text-center">
 					<div class="card-image">
 						<a href="{% url 'datingapp:partner_account' user.id %}">
 						<img src="{{ user.profile_pic.url }}" alt="">
